--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-email": "^2.1.3",
     "react-hook-form": "^7.51.4",
     "resend": "^3.2.0",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
