new post bug fixed

--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.378.0",
     "mini-svg-data-uri": "^1.4.4",
-    "mongoose": "^8.3.4",
+    "mongoose": "^8.4.1",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-email": "^2.1.3",
