email bug fixed

--- a/package.json
+++ b/package.json
@@ -24,16 +24,19 @@
     "@react-email/html": "^0.0.8",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/nodemailer": "^6.4.15",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.2.0",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.378.0",
     "mini-svg-data-uri": "^1.4.4",
     "mongoose": "^8.4.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-email": "^2.1.3",
